--- a/index.html
+++ b/index.html
@@ -1,28 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
+
 </head>
-<body>
-    <section class="heading">
-        <nav>
-            <div class="nav-title">
-                <h4>Influencer products</h4>
-            </div>
-            <div class="nav-list">
-                <ul>
-                    <li>Home</li>
-                    <li>Products</li>
-                    <li>Sign Up</li>
-                    <li>Log In</li>
-                    <li><img src="logos/search.png" alt=""></li>
-                    <li><img src="logos/cart.png" alt=""></li>
-                </ul>
-            </div>
-        </nav>
+
+<body class="poppins-thin">
+    <nav>
+        <div class="nav-title">
+            <h4>Influencer products</h4>
+        </div>
+        <div class="nav-list">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">Sign Up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><img class="cart-logo" src="logos/search.png" alt=""></a></li>
+                <li><a href=""><img class="cart-logo" src="logos/cart.png" alt=""></a></li>
+            </ul>
+        </div>
+    </nav>
+    <section class="banner">
+        <div class="banner-text">
+            <h2 class="banner-text-title">Start your Journey as Influencer</h2>
+            <p class="description-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.
+            </p>
+            <button class="banner-btn">Preebook now   &#8594;</button>
+        </div>
+        <div class="banner-img">
+            <img src="images/main-camera.png" alt="">
+        </div>
     </section>
+    <section class="logo">
+        <div class="logos">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </div>
+    </section>
+
 </body>
+
 </html>
