--- a/index.html
+++ b/index.html
@@ -53,6 +53,81 @@
             <img src="logos/Target.svg" alt="">
         </div>
     </section>
+    <section class="product">
+        <h5 class="product-head">Popular Collection</h5>
+        <div class="product-container">
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+            <div class="products">
+                <img src="images/tripod.png" alt="">
+                <h5>Flex Tripod</h5>
+                <h6>$50.48</h6>
+                <p>Wordwide shifting available
+                    Buyers protection possible!</p>
+            </div>
+        </div>
+          
+    </section>
+    <section>
+        <div class="see-more1">
+            <p class="see-more">See More &#8594;</p>
+        </div>
+    </section>
+     
 
 </body>
 
