--- a/index.html
+++ b/index.html
@@ -127,6 +127,24 @@
             <p class="see-more">See More &#8594;</p>
         </div>
     </section>
+    <section class="last-section">
+        <div class="last-img">
+            <img src="images/gear.png" alt="">
+        </div>
+        <div class="last-section-description">
+            <h3>Featured products at one place</h3>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button>Join Now &#8594;</button>
+        </div>
+
+    </section>
+    <section>
+        <div class="foot">
+            <h4>Influencer products</h4>
+            <p class="p-foot1">Copyright © 2020  influencer products</p>
+            <p class="p-foot1 p-foot2">All rights reserved</p>
+        </div>
+    </section>
      
 
 </body>
